<resources>
    <string name="app_name">AddictionRecovery</string>
    <string name="welcome_speech">Bağımlılıklarla ilgili birçok şey öğreneceğiniz yolculuğunuza hoş geldiniz. Yolculuğa başlamak için kaydırın ve giriş yapın.</string>
    <string name="welcome_speech2">Uygulamamıza hoş geldiniz. Anasayfaya geçmek için kaydırabilir ya da ok simgesine tıklayabilirsiniz.</string>
    <string name="nav_open">Nav_bar_opened</string>
    <string name="nav_close">Nav_bar_closed</string>
    <string name="general_addiction_title1">Bağımlılık Nedir?</string>
    <string name="general_addiction_content1">Bağımlılık; kişinin kullandığı bir madde, alkol, nesne veya yaptığı bir davranış (eylem) üzerinde kontrolünü kaybetmesidir.</string>
    <string name="general_addiction_title2">Bağımlılık Nasıl Oluşur?</string>
    <string name="general_addiction_content2">Bağımlılığa neden olan faktörler incelendiğinde bağımlılığın nedeni olarak tek bir etkenden söz etmek güçtür. Bağımlılık için birçok etken söz konusu olabilir. Psikolojik ve biyolojik etkenler bağımlılık sürecini etkilemektedir. Kişi ilk olarak merak ve korku duygusu ile kullanımı denemek isteyebilir.</string>
    <string name="general_addiction_subtitle1">Bağımlılık Belirtileri</string>
    <string-array name="general_symptoms">
        <item name="general_addiction_symptoms1">"Sosyal, örneğin spesifik bağımlılığın olumsuz karşılanmadığı kişilerle görüşmek, ortamlarda bulunmak."</item>
        <item name="general_addiction_symptoms2">"Sağlıkla ilgili sorunlar, örneğin uykusuzluk ya da hafıza kaybı."</item>
        <item name="general_addiction_symptoms3">"Strese karşı daha fazla hassas olmak ve daha şiddetli tepki göstermek."</item>
        <item name="general_addiction_symptoms4">"Üzgünlük, endişe ve depresyonda gözle görülür artış."</item>
        <item name="general_addiction_symptoms5">"Belirli bir maddeden uzak durmak ya da belirli bir davranışı yapmayı bırakmakta zorlanmak."</item>
        <item name="general_addiction_symptoms6">"Düşük benlik saygısı, sosyal anksiyetenin neden olduğu geri çekilme veya izolasyon."</item>
    </string-array>
    <string name="warning_ga">"Küçük bir hatırlatma: Testler size yol göstermek ve bilgi edinmeniz için oluşturulmuş olup kendi kendinize teşhis koymanız sizi yanıltabilir. Eğer kendinizi iyi hissetmiyorsanız bir sağlık kuruluşu ile iletişime geçiniz."</string>
    <string name="alt_toolbar_anasayfa">Anasayfa</string>
    <string name="bottom_sorular">Sorular</string>
    <string name="bottom_videolar">Videolar</string>
    <string name="bottom_destek">Destek</string>
    <string name="question_page_content">Cevabını merak ettiğiniz sorunun kutucuğuna dokunarak cevaba ulaşabilirsiniz.</string>
    <string-array name="general_addiction_test_titles">
        <item>Bağımlı Olmaya Ne Kadar Yatkınsın?  Cevabı görmek için testi çöz.</item>
        <item>Bağımlılığa Yatkın Davranışların Var Mı? Cevabı görmek için dokun. </item>
        <item>Bağımlılık Belirtisi Gösteriyor Musun?  Cevabı görmek için dokun.</item>

    </string-array>
    <string name="title_activity_general_addiction_videos_page">GeneralAddictionVideosPage</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="addiction_support_speech">Bağımlılık konusunda bilgi ve destek alabileceğiniz bazı kurum ve kuruluşlara aşağıdan ulaşabilirsiniz  </string>
    <string name="purpose_text">Bağımlılık, birçok insanın karşılaştığı ciddi bir sorundur. Farklı türleri, yaşam kalitesini olumsuz etkiler. Destek ve motivasyon, bağımlılıktan kurtulmak ve sağlıklı yaşam için önemlidir.Bu mücadelede destek olmak için bir uygulama geliştirdik. Amacımız, bağımlılıkla mücadele eden herkese rehberlik etmek ve motivasyon sağlamak. Uygulamamız, kullanıcılara bilgi ve destek sunarak sağlıklı bir yaşam sürmelerine yardımcı olmayı hedefliyor. Herkesin bağımlılıktan arınmış bir hayat yaşamasına katkıda bulunmak için buradayız.</string>
    <string name="what_is_subs_ad_title">Madde Bağımlılığı Nedir?</string>
    <string name="what_is_subs_ad_content">Vücudun işlevlerini olumsuz yönde etkileyen maddelerin kullanılması, bundan dolayı zarar görüldüğü hâlde bu maddelerin kullanımının bırakılamamasıdır.</string>
    <string name="subs_add_types">Uyuşturucu Maddeye Bağımlılık Çeşitleri Nelerdir?</string>
    <string name="what_is_alcohol_addiction_title">"Alkol Bağımlılığı Nedir?"</string>
    <string name="what_is_alcohol_addiction_text">"Dünya Sağlık Örgütüne göre, alkol bağımlılığı, alkolün yinelenen bir biçimde veya sürekli kullanımından kaynaklanan kullanım bozukluğu olarak tanımlanmaktadır."</string>
    <string name="alcohol_addiction_diagnose_title">"En Yaygın Kullanılan Tanı Kriteri Nedir?"</string>
    <string name="alcohol_addiction_diagnose_text">"Amerikan Psikiyatri Birliğinin belirlediği DSM- 5 tanı ölçütlerine göre alkol bağımlılığı; on iki aylık bir süre içinde, aşağıdakilerden en az ikisi ile kendini gösteren, günlük hayatında belirgin bir sıkıntıya ya da işlevsellikte düşmeye yol açan, sorunlu bir alkol kullanım örüntüsüdür."</string>
    <string name="alcohol_addiction_effects_title">"Alkol Bağımlılığının Sağlık Üzerinde Etkileri"</string>
    <string name="alcohol_addiction_effects_text">
        \u2022Karaciğerde büyüme, yağlanma, sarılık, kanser ve siroz\n
        \u2022Yüksek tansiyon\n
        \u2022Kalpte büyüme ve ani kriz\n
        \u2022Damar tıkanıkları\n
        \u2022Beyin işlevlerinde bozulmalar\n
        \u2022Dengede bozulma\n
        \u2022Beceri isteyen uğraşları gerçekleştirmede zorlanma\n
        \u2022Alkole bağlı bunama\n
        \u2022Hafızada bozulma\n
        \u2022Testosteron (erkeklik) hormonunun azalması\n
        \u2022Östrojen (kadınlık) hormonunun yükselmesi\n
        \u2022Vücutta vitamin dengesizliği\n
        \u2022Susuzluk\n
        \u2020Kilo problemi\n
        \u2022Kas erimesi ve kaslarda zayıflık\n
        \u2022Sinir sistemine zarar\n
        \u2022Ellerde titreme\n
        \u2022Bacaklarda karıncalanma ve uyuşma\n
        \u2022Cinsel işlev bozukluğu
    </string>
    <string name="anasayfa">Anasayfa</string>
    <string name="sorular">Sorular</string>
    <string name="videolar">Videolar</string>
    <string name="destek">Destek</string>
    <string name="what_is_tech_ad_title">"Teknoloji Bağımlılığı Nedir? "</string>
    <string name="tech_main_contents">\nTeknoloji bağımlılığı elektronik cihazların kontrolsüz bir şekilde kullanılmasını ifade eder. Bunun yanı sıra internetin de bilinçsiz bir şekilde saatleri aşan kullanım süresi bağımlılık seviyesinde görülür.</string>
    <string name="tech_add_types">Teknoloji Bağımlılığı Çeşitleri Nelerdir?</string>
    <string name="tech_add_types_content">
        \n\u2022Internet Bağımlılığı:
        \n\nBireylerin çevrimiçi ortamlarda aşırı zaman geçirmesi ve internete erişim sağlayan cihazlara aşırı derecede bağımlı olması durumunu ifade eder.
        \n\n\u2022Oyun Bağımlılığı:
        \n\nÖzellikle video oyunlarına aşırı derecede bağımlı olma durumunu ifade eder. Kişinin gerçek yaşam aktivitelerini ihmal etmesine, sürekli olarak oyun oynamaya odaklanmasına neden olabilir.
        \n\n\u2022Akıllı Telefon Bağımlılığı:
        \n\nKişilerin sürekli olarak telefonlarını kontrol etme, sosyal medya ve mesajlaşma uygulamalarını sürekli olarak kullanma, ekran süresini kontrol edememe gibi davranışları içerir. Bu tür bağımlılık, gerçek dünya etkileşimlerini azaltabilir ve dikkat dağınıklığına neden olabilir.
        \n\n\u2022Sosyal Medya Bağımlılığı:
        \n\nBireylerin sosyal medya platformlarında sürekli olarak zaman geçirmesi, beğeni ve yorumlara aşırı derecede önem vermesi ve çevrimiçi kimliklerinin oluşmasına bağımlı hale gelmesi durumudur. Bu tür bağımlılık, özsaygıyı etkileyebilir ve gerçek dünya ilişkilerini olumsuz etkileyebilir.
    </string>
    <string name="tech_add_harms">Teknolojinin Zararları Nelerdir?</string>
    <string name="tech_add_harms_content">
        \n\u2022Zihinsel Becerilerde bozukluklar meydana getirebilir.
        \n\n\u2022Dikkat dağınıklığı ve konsantrasyon eksikliğine sebebiyet verebilmektedir.
        \n\n\u2022Çok fazla oyun oynayan çocuklar gerçek hayatta arkadaşlıklar kullanırken zorlanabilir.
        \n\n\u2022Çocuklar görüp etkilendikleri şeyler sonucunda öfke ve korku duyguları yoğun bir şekilde hissedebilir. Bunun sonucunda tek başına kalamama, uyuyamama ve kabuslar görme gibi durumlar ortaya çıkabilir.
        \n\n\u2022Sosyal mecralardan zorbalığa uğranılabilir.
        \n\n\u2022Teknoloji beraberinde görme problemlerini getirebilir.
    </string>
</resources>