<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_nav_id"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"

    android:background="@color/toolbar_background">

    <TextView

        android:id="@+id/home_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:drawableTop="@drawable/home"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/alt_toolbar_anasayfa"
        android:textColor="@color/alt_toolbar_icon_color"
        android:textSize="11sp" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="60dp"

        android:rotation="90"
        android:src="@drawable/line"

        />

    <TextView
        android:id="@+id/questions_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/question_mark"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/bottom_sorular"
        android:textColor="@color/alt_toolbar_icon_color"
        android:textSize="11sp"

        />

    <ImageView

        android:layout_width="55dp"
        android:layout_height="20dp"
        android:rotation="90"
        android:src="@drawable/line"

        />

    <TextView
        android:id="@+id/videos_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/videos"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/bottom_videolar"
        android:textColor="@color/alt_toolbar_icon_color"
        android:textSize="11sp" />

    <ImageView

        android:layout_width="55dp"
        android:layout_height="20dp"

        android:rotation="90"
        android:src="@drawable/line"

        />

    <TextView
        android:id="@+id/help_icon"
        android:layout_width="100dp"
        android:layout_marginLeft="-60dp"
        android:layout_height="wrap_content"
        android:paddingRight="65dp"
        android:drawableTop="@drawable/destek"
        android:gravity="left"
        android:paddingTop="10dp"
        android:text="@string/bottom_destek"
        android:textColor="@color/alt_toolbar_icon_color"
        android:textSize="11sp"

        />


</androidx.appcompat.widget.Toolbar>