<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlcoholAddictionMainPage"
    android:background="@color/app_pages_bg"
    android:id="@+id/my_drawer_layout_alcohol">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alcohol_addiction_main_page_relative_layout"
            >
            <ImageView
                android:id="@+id/alcohol_img1"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:src="@raw/alcoholic"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                />
            <ImageView
                android:id="@+id/back_to_mainpage_icon"
                android:src="@drawable/back_arrow_red"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignLeft="@id/alcohol_img1"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="-45dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/what_is_alcohol_addiction_title"
                android:background="@drawable/general_addiction_title"
                android:layout_alignTop="@id/alcohol_img1"
                android:layout_marginTop="225dp"
                android:backgroundTint="@color/alcohol_addiction_title_bg"
                android:text="@string/what_is_alcohol_addiction_title"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@style/alcohol_addiction_titles_style"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/what_is_alcohol_addiction_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/general_addiction_text"
                android:backgroundTint="@color/alcohol_addiction_content_bg"
                android:layout_alignTop="@id/what_is_alcohol_addiction_title"
                android:layout_marginTop="40dp"
                android:text="@string/what_is_alcohol_addiction_text"
                android:textAppearance="@style/alcohol_addiction_content_style"
                android:gravity="center"
                android:padding="15dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alcohol_addiction_diagnose_title"
                android:text="@string/alcohol_addiction_diagnose_title"
                android:background="@drawable/general_addiction_title"
                android:layout_alignTop="@id/what_is_alcohol_addiction_content"
                android:layout_marginTop="140dp"
                android:backgroundTint="@color/alcohol_addiction_title_bg"
                android:textAppearance="@style/alcohol_addiction_titles_style"
                android:padding="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alcohol_addiction_diagnose_content"
                android:layout_alignTop="@id/alcohol_addiction_diagnose_title"
                android:backgroundTint="@color/alcohol_addiction_content_bg"
                android:background="@drawable/general_addiction_text"
                android:layout_marginTop="50dp"
                android:text="@string/alcohol_addiction_diagnose_text"
                android:textAppearance="@style/alcohol_addiction_content_style"
                android:padding="15dp"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/alcohol_img2"
                android:layout_width="300dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/alcohol_addiction_diagnose_content"
                android:src="@raw/alcohol_addict"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                />
            <TextView
                android:id="@+id/alcohol_addiction_effects_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/general_addiction_title"
                android:backgroundTint="@color/alcohol_addiction_title_bg"
                android:layout_alignTop="@id/alcohol_img2"
                android:layout_marginTop="250dp"
                android:text="@string/alcohol_addiction_effects_title"
                android:padding="15dp"
                android:textAppearance="@style/alcohol_addiction_titles_style"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>
            <TextView
                android:id="@+id/alcohol_addiction_effects_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/alcohol_addiction_content_bg"
                android:background="@drawable/general_addiction_text"
                android:layout_alignTop="@id/alcohol_addiction_effects_title"
                android:layout_marginTop="70dp"
                android:text="@string/alcohol_addiction_effects_text"
                android:textAppearance="@style/alcohol_addiction_content_style"
                android:padding="15dp"
                android:layout_marginBottom="75dp"/>





        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include layout="@layout/page_toolbar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <include layout="@layout/bottom_nav_view"
            android:id="@+id/bottom_nav_id"
            android:visibility="visible">

        </include>
    </RelativeLayout>
    <include
        layout="@layout/nav_view"
        android:visibility="invisible"/>
</androidx.drawerlayout.widget.DrawerLayout>