<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TechnologyAddictionMainPage"
    android:background="@color/app_pages_bg"
    android:id="@+id/my_drawer_layout_tech_main"
    android:orientation="vertical">
    
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:id="@+id/technology_addiction_main_page_layout"
            android:layout_width="match_parent"
            android:layout_height="2900dp">

            <ImageView
                android:id="@+id/tech_img1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="120dp"
                android:src="@raw/tech2" />

            <ImageView
                android:id="@+id/back_to_main_page"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/back_arrow_red" />

            <TextView
                android:id="@+id/what_is_tech_addiction_title"
                android:layout_width="275dp"
                android:layout_height="35dp"
                android:layout_below="@+id/tech_img1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="42dp"
                android:background="@drawable/general_addiction_title"
                android:backgroundTint="@color/tech_addiction_content_title_bg"
                android:gravity="center"
                android:textAppearance="@style/tech_main_title"
                android:text="@string/what_is_tech_ad_title"
                />

            <TextView
                android:id="@+id/what_is_tech_add_content"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/what_is_tech_addiction_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:background="@drawable/general_addiction_text"
                android:backgroundTint="@color/tech_addiction_content_text_bg"
                android:gravity="center"
                android:textAppearance="@style/tech_main_contents"
                android:text="@string/tech_main_contents"
                />

            <TextView
                android:id="@+id/what_is_tech_add_type"
                android:layout_width="275dp"
                android:layout_height="35dp"
                android:layout_below="@+id/what_is_tech_add_content"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/general_addiction_title"
                android:backgroundTint="@color/tech_addiction_content_title_bg"
                android:gravity="center"
                android:textAppearance="@style/tech_main_title"
                android:text="@string/tech_add_types"/>

            <TextView
                android:id="@+id/tech_add_type_content"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/what_is_tech_add_type"
                android:layout_marginTop="0dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/general_addiction_text"
                android:backgroundTint="@color/tech_addiction_content_text_bg"
                android:gravity="left"
                android:padding="10dp"
                android:textAppearance="@style/tech_main_contents"
                android:text="@string/tech_add_types_content"/>

            <TextView
                android:id="@+id/tech_add_harms_title"
                android:layout_width="275dp"
                android:layout_height="35dp"
                android:layout_below="@+id/tech_add_type_content"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/general_addiction_title"
                android:backgroundTint="@color/tech_addiction_content_title_bg"
                android:gravity="center"
                android:textAppearance="@style/tech_main_title"
                android:text="@string/tech_add_harms"/>

            <TextView
                android:id="@+id/tech_add_harms_content"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tech_add_harms_title"
                android:layout_marginTop="0dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/general_addiction_text"
                android:backgroundTint="@color/tech_addiction_content_text_bg"
                android:gravity="left"
                android:padding="10dp"
                android:textAppearance="@style/tech_main_contents"
                android:text="@string/tech_add_harms_content"/>

            <ImageView
                android:id="@+id/tech_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tech_add_harms_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@raw/tech_bebrave"/>

            <ImageView
                android:id="@+id/tech_img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tech_img2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@raw/tech3"/>

            <ImageView
                android:id="@+id/tech_sypmtom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tech_img3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:src="@raw/tech_symptom_title"/>

            <GridView
                android:id="@+id/tech_grid1"
                android:layout_width="320dp"
                android:layout_height="350dp"
                android:layout_below="@+id/tech_sypmtom_title"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:horizontalSpacing="3dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />

            <ImageView
                android:id="@+id/tech_img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tech_grid1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:src="@raw/tech4"/>

            <ImageView
                android:id="@+id/tech_test_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tech_img4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:src="@raw/tech_test_title" />

            <TextView
                android:id="@+id/warning_tech"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tech_test_title"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/warning_bg"
                android:backgroundTint="@color/tech_addiction_content_text_bg"
                android:textAppearance="@style/tech_warning_text"
                android:text="@string/warning_ga"
                android:gravity="left"
                android:padding="10dp"
                android:drawableEnd="@raw/tech_warning"/>

            <GridView
                android:id="@+id/tech_grid2"
                android:layout_width="320dp"
                android:layout_height="140dp"
                android:layout_below="@+id/warning_tech"
                android:layout_marginTop="45dp"
                android:layout_centerHorizontal="true"
                android:numColumns="3"
                android:verticalSpacing="5dp"
                android:horizontalSpacing="3dp"
                android:gravity="center"
                android:stretchMode="columnWidth"/>



        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include layout="@layout/page_toolbar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <include layout="@layout/bottom_nav_view"
            android:id="@+id/bottom_nav_id">
        </include>
    </RelativeLayout>
    <include
        layout="@layout/nav_view"
        android:visibility="invisible"/>

</androidx.drawerlayout.widget.DrawerLayout>